--- a/Data_Visualization_Exercise_(Practice).ipynb
+++ b/Data_Visualization_Exercise_(Practice).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODfs/ARRpFK5OKZ8SY+epF",
+      "authorship_tag": "ABX9TyPS+WRZVxqhQGATi+OELvq3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Pinapple Preference"
+        "# Pineapple Preference"
       ],
       "metadata": {
         "id": "xQSereox2vMj"
@@ -483,15 +483,6 @@
       "metadata": {
         "id": "6YnDE-EnwsV5"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aU1WUfiut8iM"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
